<resources>
    <string name="app_name">Glühwein Maps</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="previous">Abbrechen</string>
    <string name="save">Bewerten</string>

    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sign_in">Register</string>

    <!-- unused: <string name="freunde">Freunde:</string>-->
    <string name="title_activity_detailed_market">Übersicht</string>

    <!-- Content Descriptions -->
    <string name="content_description_ImageView_arrow_Down">Nach unten zeigender Pfeil</string>
    <string name="content_description_ImageView_arrow_Up">Nach oben zeigender Pfeil</string>
    <string name="content_description_ImageView_market_image">Bild des Weihnachtsmarktes</string>
    <string name="content_description_ImageView_image_star">Sternbewertung</string>
    <string name="content_description_Rating_Star">Stern der Rating-Bewertung</string>
    <string name="content_description_Icon_address">Icon fuer die Adresse</string>
    <string name="content_description_Icon_date">Icon fuer das Datum</string>
    <string name="content_description_Icon_time">Icon fuer die Oeffnungszeiten</string>
    <string name="content_description_go_back">Go back Arrow</string>


    <!-- Default Values -->
    <string name="default_market_rating">0</string>
    <string name="default_market_name">Not Known</string>
    <string name="default_market_distance">1,2km</string>
    <string name="app_icon">App Icon</string>
    <string name="choose_username">Wähle einen Nutzernamen</string>
    <string name="person_icon">placeholder person icon</string>
    <string name="hallo_lukas">Hallo</string>
    <string name="hint_username">username</string>
    <string name="menu_explore">Entdecken</string>
    <string name="menu_friends">Freunde</string>
    <string name="menu_search">Search</string>
    <string name="default_detailed_market_address">Address not Found</string>
    <string name="default_detailed_market_date">Dates not Found</string>
    <string name="default_detailed_market_time">Time not Found</string>
    <string name="default_detailed_market_homepage">Link not Found</string>
    <string name="default_market_rate_title">Bewerten Sie Ihr Erlebnis am Adventmarkt</string>
    <string name="default_comment_username">Christopher</string>
    <string name="default_comment_title">Kein Titel</string>
    <string name="default_comment_text">Kein Kommentar</string>

    <!-- shown Strings -->
    <string name="label_ambiente">Ambiente: </string>
    <string name="label_speisen">Speisen: </string>
    <string name="label_getraenke">Getränke: </string>
    <string name="label_crowding">Überfülltheit: </string>
    <string name="label_family">Familie: </string>
    <string name="label_comment_title">Erfahrungsberichte</string>
    <string name="friend_add">friend_add</string>
    <string name="hint_title">Titel</string>
    <string name="hint_comment">Kommentare zu Ihrem Erlebnis</string>
    <string name="menu_sort">menu_sort</string>
    <string name="rating">Bewertung</string>
    <string name="rating_family">Familie</string>
    <string name="rating_ambiente">Ambiente</string>
    <string name="rating_food">Speisen</string>
    <string name="rating_drinks">Getränke</string>
    <string name="rating_crowding">Überfülltheit</string>
    <string name="qr_code_description">QR code used to be added as a new friend</string>
    <string name="person_icon_description">Icon of a person, chest and head</string>
    <string name="result">Result</string>
    <string name="swipe_dialogue_image_description">Representation of swipe feature</string>
    <string name="button_distance_description">Entfernung</string>
</resources>
