<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="0dp"
    android:layout_marginVertical="2dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/previewCard"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/market_image"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:layout_margin="0dp"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/content_description_ImageView_market_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rating_bg"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/market_image"
                app:layout_constraintEnd_toEndOf="@+id/market_image"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="@+id/market_image"
                app:layout_constraintTop_toTopOf="@+id/market_image"
                app:layout_constraintVertical_bias="1">

                <TextView
                    android:id="@+id/market_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/default_market_rating"
                    android:textColor="@color/textColor"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/market_rating"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/ic_star_black_16dp"
                    android:contentDescription="@string/content_description_ImageView_image_star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@id/market_rating"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/market_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/name_bg"
                android:text="@string/default_market_name"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/market_image"
                app:layout_constraintTop_toBottomOf="@id/market_image"
                app:layout_constraintVertical_bias="1" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>