<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/comment_parent_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/comment_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_comment_username"
        android:textColor="@color/borderColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_line"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginVertical="8dp"
        android:src="@mipmap/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/comment_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/comment_username"
        app:layout_constraintTop_toBottomOf="@+id/comment_username"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/vertical_line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/default_comment_title"
        android:textColor="@color/borderColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/vertical_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/comment_username" />

    <TextView
        android:id="@+id/comment_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/default_comment_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_line"
        app:layout_constraintEnd_toEndOf="@id/comment_title"
        app:layout_constraintStart_toStartOf="@+id/comment_title"
        app:layout_constraintTop_toBottomOf="@+id/comment_title"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#FF000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>